Fixed a lot of layout issues, started playing with disabling the "videos" tab programmatically, moved the title, added a drop shadow

--- a/scss/sports/template.scss
+++ b/scss/sports/template.scss
@@ -1,5 +1,8 @@
 @import "all";
 
+$darkGreen: #416847;
+$lightGreen: #629b63;
+
 @media all and (min-width: 980px) {
 	#center {
 		max-width: 852px !important;
@@ -21,20 +24,47 @@ body {
 	background: {
 		color: white;
 	}
+	box-shadow: 0px 2px 7px #3c3c3c;
+	@include pie;
+	.tab-pane {
+		padding: {
+			top: 4px;
+			left: 2px;
+			right: 2px;
+			bottom: 4px;
+		}
+	}
+	.alert {
+		margin: {
+			top: 8px;
+			bottom: 8px;
+		}
+	}
+	p {
+		margin: {
+			left: 1px;
+		}
+	}
 }
 
 #title {
+	position: relative;
+	background: {
+		image: url("/harbingernews/sports/baseball/background-tile.png");
+		position: center;
+		repeat: no-repeat;
+	}
+	height: 170px;
+	margin: {
+		bottom: 5px;
+	}
 	h1 {
+		position: inherit !important;
+		top: 130px;
 		color: white;
-		margin: {
-			top: 0px;
-		}
-		background: {
-			image: url("/harbingernews/sports/baseball/background-tile.png");
-			position: center;
-			repeat: no-repeat;
-		}
-		height: 170px;
+		width: 95%;
+		margin: 0 auto;
+		text-shadow: 2px 2px 2px #494949;
 	}
 }
 
@@ -53,31 +83,20 @@ body {
 	}
 }
 
-#photos {
-	background: {
-		color: yellow;
-	}
-	h3 {
-		text-align: center;
-	}
-	.photo {
-		min-height: 10px;
-		background: {
-			color: purple;
-		}
-	}
-}
-
-#schedule {
-	background: {
-		color: blue
-	}
-	h3 {
-		text-align: center;
-	}
-}
-
-.nav-tabs {
+.limited-width {
 	width: 95% !important;
 	margin: 0 auto;
+}
+
+.nab-tabs {
+	a {
+		color: $darkGreen;
+		&:hover {
+			background: {
+				color: #dddddd !important;
+			}
+			color: $lightGreen;
+			text-shadow: 1px 1px 3px white;
+		}
+	}
 }
